General container overflow fix, refine footer - kudos to @Nicd

--- a/sass/layout/_containers.scss
+++ b/sass/layout/_containers.scss
@@ -61,6 +61,7 @@ body {
     padding-bottom: 2rem;
     padding-left: 0;
     padding-right: 0;
+    overflow: hidden;
 
     @media(max-width: $container-desktop) {
       padding-left: 2rem;
